# spoac

./: .gitignore  CMakeLists.txt  Doxyfile
cmake/: Assert.cmake  BuildLibProjectInterfacesCpp.cmake  BuildLibProjectInterfacesPython.cmake  CMakeLists.txt  CheckCommonDependencies.cmake  DependencyUtils.cmake  FindIce.cmake  FindIceUtil.cmake  FindPkgConfig.cmake  GenerateConfigFile.cmake  NameUtils.cmake  Setup.cmake  SetupDirectories.cmake  SetupOs.cmake  Slice2Cpp.cmake  TargetUtils.cmake  TestIce.cmake  UseBasicRules.cmake  UseComponentRules.cmake  UseIce.cmake  UseIceBasics.cmake  UseLibProjectInterfaces.cmake  UseZeroC.cmake  slice2python_rules.cmake
doxygen/: DoxygenLayout.xml  doxygen.css  footer.html
doxygen/output/: index.html
scripts/: CMakeLists.txt  ice-start.sh  spoac-armar-setenv.sh  spoac-armar-start.sh  spoac-armar-stop.sh
scripts/ice-config/: icebox_icestorm.cfg
src/: CMakeLists.txt
src/examples/python/: CEA.py  CEAController.py  CommandSender.py  ControllerListener.py  PlanTester.py
src/interfaces/: CMakeLists.txt  Planning.ice  SymbolicExecution.ice
src/interfaces/cpp/: CMakeLists.txt
src/interfaces/python/: CMakeLists.txt
src/interfaces/python/spoac/: README.txt
src/interfaces/slice/: CMakeLists.txt  Planning.ice  slice_sources.cmake
src/interfaces/slice/spoac/: LTM.ice  Planning.ice  SymbolicExecution.ice
src/python/: CMakeLists.txt
src/python/spoac/util/: CMakeLists.txt  IceApplication.py  __init__.py
src/spoac/: CMakeLists.txt
src/spoac/JSON/: AllValueTypes.h  Array.cpp  Array.h  Bool.cpp  Bool.h  CMakeLists.txt  Exception.cpp  Exception.h  Identifier.cpp  Identifier.h  Null.cpp  Null.h  Number.cpp  Number.h  Object.cpp  Object.h  Parser.cpp  Parser.h  ParserException.cpp  ParserException.h  String.cpp  String.h  Value.cpp  Value.h  ValueException.cpp  ValueException.h
src/spoac/cea/: Action.cpp  Action.h  ActionException.cpp  ActionException.h  ActionState.cpp  ActionState.h  ActionStateFinal.cpp  ActionStateFinal.h  ActionStateMachine.cpp  ActionStateMachine.h  ActivityController.cpp  ActivityController.h  CEA.cpp  CEA.h  CEAControl.h  CEAInterface.h  CMakeLists.txt  OAC.cpp  OAC.h  Object.cpp  Object.h  ObjectVector.cpp  ObjectVector.h  SuperAction.cpp  SuperAction.h  VariantMap.h
src/spoac/cea/test/: ActionStateMachineTest.cpp  ActionTest.cpp  ActivityControllerTest.cpp  CEATest.cpp  CMakeLists.txt  CountTwoAction.h  CountTwoSuperAction.h  DummyActivityController.h  OACTest.cpp  ObjectTest.cpp  ObjectVectorTest.cpp
src/spoac/common/: AbstractFactoryMethod.h  CMakeLists.txt  DependencyManager.cpp  DependencyManager.h  Exception.cpp  Exception.h
src/spoac/common/test/: CMakeLists.txt  DependencyManagerTest.cpp
src/spoac/controller/: CMakeLists.txt  IceNetworkController.cpp  IceNetworkController.h  PlanNetworkController.cpp  PlanNetworkController.h  SequenceController.cpp  SequenceController.h
src/spoac/controller/test/: CMakeLists.txt  CountingCEA.h  IceNetworkControllerTest.cpp  PlanNetworkControllerTest.cpp  SequenceControllerTest.cpp
src/spoac/ice/: CMakeLists.txt  IceHelper.cpp  IceHelper.h
src/spoac/ice/test/: CMakeLists.txt  IceHelperTest.cpp
src/spoac/ltm/: CMakeLists.txt  LTM.cpp  LTM.h
src/spoac/ltm/test/: CMakeLists.txt  LTMTest.cpp
src/spoac/ltm/test/cognition/memory/ltm_db/oacs/: CountTwo.json  SampleOAC.json
src/spoac/ltm/test/cognition/memory/ltm_db/scenarios/: abc.json
src/spoac/ltmserver/: CMakeLists.txt  LTMServer.cpp
src/spoac/stm/: CMakeLists.txt  Object.cpp  Object.h  ObjectSet.cpp  ObjectSet.h  ObjectVector.cpp  ObjectVector.h  PKSService.cpp  PKSService.h  ParameterException.cpp  ParameterException.h  PerceptionHandler.h  PlanNetworkPerceptionHandler.cpp  PlanNetworkPerceptionHandler.h  STM.cpp  STM.h  STMException.cpp  STMException.h  VariantMap.h
src/spoac/stm/test/: CMakeLists.txt  CountPerceptionHandler.h  ObjectSetTest.cpp  ObjectTest.cpp  ObjectVectorTest.cpp  PlanNetworkPerceptionHandlerTest.cpp  STMTest.cpp
src/spoactest/: test.h  test_main.h
